Dark Mode Fix

--- a/_sass/_abstracts/_variables.scss
+++ b/_sass/_abstracts/_variables.scss
@@ -121,11 +121,10 @@ $orange: #DB7704;
 
 // Padding Overrides
 
-#py-0 {
-  padding-bottom: 0;
-  padding-top:0;
+.pb-0 {
+  padding-bottom: 0 !important;
 }
 
-#mb-1 {
-  margin-bottom: 1rem;
+.mb-0 {
+  margin-bottom: 0 !important;
 }
